--- a/my-site/css/default.css
+++ b/my-site/css/default.css
@@ -3,6 +3,7 @@ body {
     font-size: 16px;
     margin: 0px auto 0px auto;
     width: 600px;
+    font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 
 div#header {
