--- a/my-site/templates/default.html
+++ b/my-site/templates/default.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My Hakyll Blog - $title$</title>
+	<title>Eric Campbell - $title$</title>
         <link rel="stylesheet" href="/css/default.css" />
     </head>
     <body>
         <div id="header">
             <div id="logo">
-                <a href="/">My Hakyll Blog</a>
+                <a href="/">Eric Campbell</a>
             </div>
             <div id="navigation">
                 <a href="/">Home</a>
@@ -21,8 +21,7 @@
         </div>
 
         <div id="content">
-            <h1>$title$</h1>
-            $body$
+	  $body$
         </div>
 
         <div id="footer">
