--- a/my-site/templates/paper.html
+++ b/my-site/templates/paper.html
@@ -1,8 +1,8 @@
-<div class="info">
-    Posted on $date$
-    $if(author)$
-        by $author$
-    $endif$
+<div>
+  <h2> $title$ </h2>
+  <h3> $authors$ </h3>
+  We submitted the <a href=$pdf$>manuscript</a> to $venue$ in $month$. 
+  $if(slides)$
+  Presentation slides can be found <a href=$slides$> here</a>.
+  $endif$
 </div>
-
-$body$
