--- a/my-site/templates/paper.html
+++ b/my-site/templates/paper.html
@@ -1,8 +1,12 @@
 <div>
   <h2> $title$ </h2>
   <h3> $authors$ </h3>
-  We submitted the <a href=$pdf$>manuscript</a> to $venue$ in $month$. 
+
+  <p>$descr$</p>
+  
+  <p> We submitted the <a href=$pdf$>manuscript</a> to $venue$ in $month$. 
   $if(slides)$
   Presentation slides can be found <a href=$slides$> here</a>.
   $endif$
+  </p>
 </div>
