Launch blog with single post

--- a/my-site/templates/default.html
+++ b/my-site/templates/default.html
@@ -9,15 +9,15 @@
     </head>
     <body>
         <div id="header">
-            <!-- <div id="logo"> -->
-            <!--     <a href="/">Eric Campbell</a> -->
-            <!-- </div> -->
-            <!-- <div id="navigation"> -->
-            <!--     <a href="/">Home</a> -->
-            <!--     <a href="/about.html">About</a> -->
-            <!--     <a href="/contact.html">Contact</a> -->
-            <!--     <a href="/archive.html">Archive</a> -->
-            <!-- </div> -->
+            <div id="logo">
+                <a href="/">Eric Campbell</a>
+            </div>
+            <div id="navigation">
+                <a href="/">Home</a>
+                <a href="/news.html">News</a>
+                <!-- <a href="/papers.html">Publications</a>x -->
+                <a href="/posts.html">Blog</a>
+            </div>
         </div>
 
         <div id="content">
