--- a/my-site/templates/post.html
+++ b/my-site/templates/post.html
@@ -1,4 +1,8 @@
 <div class="info">
+  <h1> $title$ </h1>
+  $if(subtitle)$
+  <h3> $subtitle$ </h3>
+  $endif$
     Posted on $date$
     $if(author)$
         by $author$
