--- a/my-site/css/default.css
+++ b/my-site/css/default.css
@@ -57,10 +57,17 @@ div#footer {
 
 h1 {
     font-size: 24px;
+    color: #0b0a0a;
+}
+
+h3 {
+    color: #0b0a0a;
+
 }
 
 h2 {
     font-size: 20px;
+    color: #0b0a0a;
 }
 
 .float-left{
@@ -74,6 +81,7 @@ div.info {
     color: #555;
     font-size: 14px;
     font-style: italic;
+    padding-bottom: 10px;
 }
 
 #profile{
@@ -112,4 +120,10 @@ td, th {
 
 tr:nth-child(odd) {
     background-color: gainsboro;
+}
+
+pre,
+code {
+    background-color: gainsboro;
+    padding : 2px
 }
