--- a/my-site/templates/paper-list.html
+++ b/my-site/templates/paper-list.html
@@ -25,6 +25,9 @@
 	$if(slides)$
 	<a href=$slides$> slides</a>
 	$endif$
+    $if(video)$
+    <a href=$video$> video</a>
+    $endif$
 	</td>
     </tr>
     $endfor$
