--- a/my-site/templates/paper-list.html
+++ b/my-site/templates/paper-list.html
@@ -11,8 +11,11 @@
               </a>
               $endif$
           </b>
+          $if(award)$
+          <br/><b>$award$</b>
+          $endif$
           $if(note)$
-	      <br>[$note$]
+	      <br/>[$note$]
 	      $endif$
           <br/>
           $authors$
